# value-based-care-machine-learning-models

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  MODEL_CARDS.md  Makefile  PUBLISHING.md  README.md  ROADMAP.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  publish-pypi.yml
config/: settings.yaml
config/databricks/: README.md  lakehouse_layers.yaml  mlflow_run_tags.example.json
data/sample/: benchmarks.csv  claims_header.csv  claims_line.csv  diagnosis.csv  eligibility.csv  interventions.csv  member_context.csv  members.csv  providers.csv
scripts/: run_local_demo.sh
sql/queries/: pmpm.sql
sql/schema/: postgres.sql
src/carevalue_claims_ml/: __init__.py  agent_contracts.py  agent_orchestrator.py  attribution.py  benchmarks.py  bundled_episode_engine.py  cli.py  config.py  data_generation.py  db.py  episodes.py  etl.py  evaluation.py  features.py  insurance_policy.py  journey_signals.py  llm_optional.py  loader.py  memory_store.py  models.py  policy_simulation.py  reporting.py  sql_build_member_months.sql
src/vbc_intel_benchmarks/: __init__.py
src/vbc_intel_careops/: __init__.py
src/vbc_intel_core/: __init__.py
src/vbc_intel_episodes/: __init__.py
src/vbc_intel_policy/: __init__.py
tests/: test_agentic_orchestration.py  test_bundled_episode_engine.py  test_cli_contracts.py  test_episodes_enhanced.py  test_evaluation_and_policy.py  test_generation.py  test_journey_signals.py  test_models_suite.py  test_vbc_intel_namespace.py
